<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_exit_linear"
    android:layout_width="match_parent"
    android:layout_height="171dp"
    android:background="@drawable/card_round"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- exit the app textview -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nexalight"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_delete_this_recording"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- No  Text View -->
            <TextView
                android:id="@+id/textViewDelete"
                android:layout_width="121dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/card_round"
                android:backgroundTint="@color/dark_grey"
                android:elevation="8dp"
                android:fontFamily="@font/nexalight"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Yes Text View -->
            <TextView
                android:id="@+id/textViewCancel"
                android:layout_width="121dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/card_round"
                android:backgroundTint="@color/dark_grey"
                android:elevation="8dp"
                android:fontFamily="@font/nexalight"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
