<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/player_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey"
    android:elevation="50dp"
    android:outlineProvider="background"
    android:padding="0dp">


    <TextView
        android:id="@+id/player_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nexalight"
        android:text="@string/media_player"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/player_filename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/file_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_header_name" />


    <ImageButton
        android:id="@+id/player_play_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/light_grey"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_filename"
        app:srcCompat="@drawable/icon_play_player" />

<!--    <ImageButton-->
<!--        android:id="@+id/btn_back_forward"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:background="@color/light_grey"-->
<!--        android:scaleType="centerCrop"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/player_play_btn"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/player_play_btn"-->
<!--        app:layout_constraintHorizontal_bias="0.503"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/player_play_btn"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        app:srcCompat="@drawable/icon_back_forward" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/btn_forward"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:background="@color/light_grey"-->
<!--        android:scaleType="centerCrop"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/player_play_btn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/player_play_btn"-->
<!--        app:srcCompat="@drawable/icon_fast_forward" />-->

    <SeekBar
        android:id="@+id/player_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:background="@color/light_grey"
        android:progressTint="@color/dark_grey"
        android:thumbTint="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_play_btn" />

    <Button
        android:id="@+id/_player_sheet_btn_cancel"
        android:layout_width="162dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_stroke_grey"
        android:fontFamily="@font/nexalight"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:theme="@style/SplashScreenTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_seekBar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>